--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,14 @@
     "require": {
         "php": "^8.2",
         "devmarketer/easynav": "^1.0",
+        "doctrine/dbal": "^4.2",
         "guzzlehttp/guzzle": "^7.2",
+        "illuminate/database": "*",
         "laravel/framework": "^12.3.0",
         "laravel/legacy-factories": "^1.4",
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "^4.0",
+        "league/commonmark": "^2.7.0",
         "symfony/http-client": "^6.1",
         "symfony/mailgun-mailer": "^6.1",
         "symfony/postmark-mailer": "^6.1"
