--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^4.6.0",
         "chart.js": "^4.4.9",
-        "jquery": "^3.7.1"
+        "jquery": "^3.7.1",
+        "typed.js": "^2.1.0"
     }
 }
