--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "^4.0",
         "league/commonmark": "^2.7.0",
+        "nesbot/carbon": "^3.9",
         "symfony/http-client": "^6.1",
         "symfony/mailgun-mailer": "^6.1",
         "symfony/postmark-mailer": "^6.1"
