pksf2025.rd.v4.add_aggregat_data

--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\WINDOWS\System32\SHELL32.dll,48
+IconResource=C:\Users\MyBook Hype AMD\Downloads\256pxlogo.ico,0
 [ViewState]
 Mode=
 Vid=
