--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.2",
         "devmarketer/easynav": "^1.0",
         "doctrine/dbal": "^4.2",
+        "erusev/parsedown": "^1.7",
         "guzzlehttp/guzzle": "^7.9",
         "illuminate/database": "*",
         "laravel/framework": "^12.3.0",
